# ray-tracer

./: CMakeLists.txt
day-one/: main.cc
